tests/baselines/reference/functionOverloads5.errors.txt
tests/cases/compiler/functionOverloads5.ts(2,10): error TS2385: Overload signatures must all be public, private or protected.


==== tests/cases/compiler/functionOverloads5.ts (1 errors) ====
    class baz { 
      public foo();
             ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
      private foo(bar?:any){ }
    }
    